--- a/static/files/index.html
+++ b/static/files/index.html
@@ -1,6 +1,6 @@
 <html ng-app="app" >
 	<head>
-		<title ng-bind="state.Stats.Title">Cloud Torrent</title>
+		<title ng-bind="state.Stats.Title">NKR's Torrent Leecher</title>
     	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<link rel="stylesheet" type="text/css" href="css/Lato/Lato.css">
 		<link rel="stylesheet" type="text/css" href="css/semantic.min.css">
@@ -22,12 +22,12 @@
 		<!-- TITLE ===================== -->
 		<div class="title">
 			<h2>
-				<a href="https://github.com/jpillora/cloud-torrent"
+				<a href="https://facebook.com/FreeIDMZone"
 					target="_blank"
 					ng-init="logoHover = false"
 					ng-mouseover="logoHover = true"
 					ng-mouseleave="logoHover = false">
-					<i class="blue icon" ng-class="{cloud:!logoHover, github: logoHover}"></i>  {{ state.Stats.Title }}
+					<i class="blue icon" ng-class="{cloud:!logoHover, github: logoHover}"></i>NR<font color="green">S</font><font color="orange">SP</font> Torrent Leecher
 				</a>
 			</h2>
 			<div class="status">
@@ -42,6 +42,8 @@
 					ng-class="{ green: connected, red: !connected }"></i>
 			</div>
 		</div>
+		
+		
 		<!-- GLOBAL ERROR MESSAGE ===================== -->
 		<div ng-if="err" class="ui error message">
 			<i class="close icon" ng-click="$root.err = null"></i>
@@ -53,13 +55,56 @@
 		<section class="omni" ng-controller="OmniController" ng-include src="'template/omni.html'"></section>
 		<section class="torrents" ng-controller="TorrentsController" ng-include src="'template/torrents.html'"></section>
 		<section class="downloads" ng-controller="DownloadsController" ng-include src="'template/downloads.html'"></section>
-
+                 
 		<footer>
-			<span>github.com/<a href="https://github.com/jpillora" target="_blank">jpillora</a>/<a href="https://github.com/jpillora/cloud-torrent" target="_blank">cloud-torrent</a> version {{ state.Stats.Version }}	-	</span>
+			<h5>{{ state.Stats.Title }}
+			<span>© <a href="https://freeidmzone.cf" target="_blank">NKR</a> <font href="https://facebook.com/FreeIDMZone" target="_blank" color="red">❤   </font><a href="https://facebook.com/FreeIDMZone" target="_blank">  India</a> version {{ state.Stats.Version }}	-	</span>
 			<span ng-if="numKeys(state.Users) > 1">{{ numKeys(state.Users) }} users connected	-	</span>
-			<span><a href="https://golang.org" target="_blank">Go</a> {{ state.Stats.Runtime }}</span>
+			<span><a href="https://freeidmzone2.blogspot.com" target="_blank">Powered By NRS Inc.</a> {{ state.Stats.Runtime }}</span></h5>
 		</footer>
+		<style type="text/css">
+#gb{
+position:fixed;
+top:50px;
+z-index:+1000;
+}
+* html #gb{position:relative;}
+.gbtab{
+height:100px;
+width:30px;
+float:left;
+cursor:pointer;
+background:url('http://4.bp.blogspot.com/-6fPYtZqZoQY/TvdFFv6UvtI/AAAAAAAAAX0/RfkxsoNJ85c/s320/shoutboxlightbluetrickiezone.png') no-repeat;
+}
+.gbcontent{
+float:left;
+border:2px solid #666666;
+background:#F5F5F5;
+padding:10px;
+}
+</style>
 
+<script type="text/javascript">
+function showHideGB(){
+var gb = document.getElementById("gb");
+var w = gb.offsetWidth;
+gb.opened ? moveGB(0, 30-w) : moveGB(20-w, 0);
+gb.opened = !gb.opened;
+}
+function moveGB(x0, xf){
+var gb = document.getElementById("gb");
+var dx = Math.abs(x0-xf) > 10 ? 5 : 1;
+var dir = xf>x0 ? 1 : -1;
+var x = x0 + dx * dir;
+gb.style.right = x.toString() + "px";
+if(x0!=xf){setTimeout("moveGB("+x+", "+xf+")", 10);}
+}
+</script>
+<div id="gb" style="right: -325px;">
+<div class="gbtab" onclick="showHideGB()">
+</div>
+<div class="gbcontent">
+	<iframe src="https://www7.cbox.ws/box/?boxid=823709&boxtag=Cz2RoU" width="100%" height="450" allowtransparency="yes" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe></div>	
 		<script src="js/vendor/query-string.js"></script>
 		<script src="js/vendor/angular.min.js"></script>
 		<script src="js/vendor/moment.min.js"></script>
@@ -72,5 +117,26 @@
 		<script src="js/utils.js"></script>
 		<script src="js/semantic-checkbox.js"></script>
 		<script src="js/run.js"></script>
+		<script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-resource/angular-resource.js"></script>
+    <script src="bower_components/angular-cookies/angular-cookies.js"></script>
+    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="bower_components/lodash/dist/lodash.compat.js"></script>
+    <script src="bower_components/angular-socket-io/socket.js"></script>
+    <script src="bower_components/ng-file-upload/angular-file-upload.js"></script>
+    <script src="bower_components/push.js/push.js"></script>
+    <!-- endbower -->
+    <!-- endbuild -->
+
+    <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <script src="scripts/app.js"></script>
+    <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/services/torrent-socket.js"></script>
+    <!-- endbuild -->
+
+    <script src="/socket.io/socket.io.js"></script>
 	</div></body>
 </html>
